# mqcppsdk

./: CMakeLists.txt  README.md  app.cpp  app.json  mqcppsdk.sln  mqcppsdk.vcxproj  mqcppsdk.vcxproj.filters
include/mqcppsdk/: Defined.h  Event.hpp  MoeQ.cpp  MoeQ.h  MoeQ.lib  Pack.cpp  Pack.h  Pack.hpp  Utils.cpp  Utils.h  Utils.hpp  api_func.inc  definition.h  mqcppsdk.cpp  mqcppsdk.h  mqcppsdk.hpp
include/utils/: pack.h  utils.h
lib/mqcppsdk/: MoeQ.lib
src/core/: api.cpp
src/utils/: pack.cpp  utils.cpp
